Updating pingjvm build_jvm.sh since were using a chainguard image now we dont need to do all of the java set up we were doing before